# ComfyUI-Forbidden-Vision

./: Forbidden_Vision_comfyui_workflow.json  Forbidden_Vision_workflow.json  README.md  __init__.py  face_detector.py  face_processor_integrated.py  latent_ai_upscaler.py  mask_processor.py  model_choice.yaml.example  pyproject.toml  requirements.txt  segs-workflow.json  utils.py
.github/workflows/: publish.yml
src/: face_detector.py  face_edit_nodes.py  face_fixer_mask_only.py  face_prep_for_edit.py  face_processor_integrated.py  latent_ai_upscaler.py  latent_builder.py  latent_inpaint_lite.py  latent_rebuilder.py  latent_refiner.py  mask_processor.py  model_manager.py  mood_presets.py  neural_train.py  sampler_scheduler_settings.py  utils.py
src/workflows/: forbidden_vision_complete.json
