[project]
name = "forbidden-vision"
description = "Custom face detection and segmentation for ComfyUI with automatic face fixing, intelligent color grading, and iterative refinement. Custom-trained models optimized for realistic, anime, and NSFW content."
version = "1.0.1"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["segmentation-models-pytorch", "ultralytics", "opencv-python-headless", "numpy", "scikit-image", "kornia", "timm", "Pillow", "huggingface_hub"]

[project.urls]
Repository = "https://github.com/luxdelux7/ComfyUI-Forbidden-Vision"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/luxdelux7/ComfyUI-Forbidden-Vision/wiki"
"Bug Tracker" = "https://github.com/luxdelux7/ComfyUI-Forbidden-Vision/issues"

[tool.comfy]
PublisherId = "luxdelux"
DisplayName = "ComfyUI-Forbidden-Vision"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

